20130216 fmfconv_ff.c: check the codec supports signed 16 bit PCM samples before
         trying to use them (Fred).
20130219 scl2trd.c: check the return code from read() and write() (Sergio).
20130223 fmfconv_ff.c: use the same encoder on later stages (Sergio).
20130223 fmfconv.c: force mpeg4 video encoder for youtube profile and don't
         force AAC audio encoder for ipod profile (Sergio).
20130407 converter/{romloader.cc,romloader.h}: include read and computed
         checksum (thanks, Ivan Shmakov) (Fred).
20130407 converter/romloader.cc: print flag byte (thanks, Ivan Shmakov) (Fred).
20130516 man/*.1: update date and revision for 1.1 release.
20130516 ChangeLog: update date in main changelog.
20130517 README: update date for 1.1 release.
20130518 man/fmfconv.1: update date for 1.1 release (Sergio).
20130520 configure.ac: fix typo in the CPPFLAGS variable name (patch #310)
         (Alberto).
20130520 man/fmfconv.1: fix syntax error (patch #311) (Alberto).
20130526 Makefile.am: distribute ChangeLog in Windows packages (Sergio).
20130526 Makefile.am: add compat/getopt.h into the dist tarball (Sergio).
20130928 Makefile.am,compat/win32/distribution.mk: take Windows distribution
         rules out of main Makefile.am (Sergio).
20131013 configure.ac,Makefile.am,compat/{Makefile.am,amiga/Makefile.am,
         unix/Makefile.am,win32/Makefile.am},hacking/Makefile.am,m4/Makefile.am,
         man/Makefile.am: use 'subdir-objects' option as advised by automake
         1.14 to place object files in subdirectories (more from patch #317)
         (Sergio).
20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
         (Sergio).
20131215 rzxtool.c: fix snapshot insertion in rzx recordings (Sergio).
20140113 man/rzxtool.1,rzxtool.c: add option for finalising rzx recordings
         (part of bug #305) (Sergio).
20140113 rzxdump.c: show block number as is needed for some operations with
         rzxtool (Sergio).